<resources>
    <string name="app_name">Quizz</string>

    <string name="not_a_member_sign_up">NOT A MEMBER? SIGN UP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOG IN</string>
    <string name="Register">Register</string>
    <string name="user_name">Name</string>
    <string name="title_activity_main">Quizz</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="delete_account">Delete Account</string>
    <string name="reset_passwoed">Reset Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_resest_password_link">Email Resest Password link</string>
    <string name="reset_password">Reset password</string>
    <string name="textview">TextView</string>
</resources>
