<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="myapp.com.quizz.changePasswordActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:paddingLeft="@dimen/dimen_16x"
        android:paddingRight="@dimen/dimen_16x"
        android:paddingTop="@dimen/dimen_16x"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/light_gray">
    <EditText
        android:id="@+id/email_resetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/oldPasswordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/old_password"
        android:paddingLeft="@dimen/dimen_16x"
        android:paddingRight="@dimen/dimen_16x"
        android:paddingTop="@dimen/dimen_16x"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/light_gray">

        <EditText
            android:id="@+id/oldPass_resetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:password="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/newpasswordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:paddingLeft="@dimen/dimen_16x"
        android:paddingRight="@dimen/dimen_16x"
        android:paddingTop="@dimen/dimen_16x"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/light_gray">

        <EditText
            android:id="@+id/newPass_resetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:password="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/resetPassword_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:background="@android:color/holo_blue_dark"/>

</LinearLayout>
